--- a/docs/memo/pipeline/基础数据/巨潮行业.ipynb
+++ b/docs/memo/pipeline/基础数据/巨潮行业.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-12-09T08:22:21.480087Z",
-     "start_time": "2017-12-09T08:22:15.361215Z"
+     "end_time": "2018-01-01T02:18:24.520857Z",
+     "start_time": "2018-01-01T02:18:17.984185Z"
     }
    },
    "outputs": [],
@@ -19,8 +19,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-12-09T08:22:21.691595Z",
-     "start_time": "2017-12-09T08:22:21.507806Z"
+     "end_time": "2018-01-01T02:18:24.685983Z",
+     "start_time": "2018-01-01T02:18:24.520857Z"
     }
    },
    "outputs": [
@@ -49,8 +49,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-12-09T08:22:46.197530Z",
-     "start_time": "2017-12-09T08:22:44.025726Z"
+     "end_time": "2018-01-01T02:18:27.366615Z",
+     "start_time": "2018-01-01T02:18:24.685983Z"
     }
    },
    "outputs": [
@@ -58,7 +58,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2017-12-09 16:22:44.667073] INFO: Loader: Read benchmark and treasury data for 000300 from 1990-10-31 to 2017-12-08\n",
       "\n",
       " 2012-11-01 15:00:00+08:00\n",
       "                      group  industry  sector  supper_sector\n",
@@ -297,15 +296,15 @@
       "Equity(603399 [新华龙])       基础材料     有色金属     101              1\n",
       "Equity(603766 [隆鑫通用])  汽车与汽车零配件       汽车     102              1\n",
       "Equity(603993 [洛阳钼业])      基础材料     有色金属     101              1\n",
-      "[2017-12-09 16:22:46.083497] INFO: Performance: Simulated 17 trading days out of 17.\n"
+      "[2018-01-01 10:18:27.268225] INFO: Performance: Simulated 17 trading days out of 17.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2017-12-09 16:22:46.083497] INFO: Performance: first open: 2012-11-01 01:31:00+00:00\n",
-      "[2017-12-09 16:22:46.083497] INFO: Performance: last close: 2012-11-23 07:00:00+00:00\n"
+      "[2018-01-01 10:18:27.268225] INFO: Performance: first open: 2012-11-01 01:31:00+00:00\n",
+      "[2018-01-01 10:18:27.268225] INFO: Performance: last close: 2012-11-23 07:00:00+00:00\n"
      ]
     },
     {
@@ -971,6 +970,8 @@
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": "block",
