--- a/docs/memo/pipeline/基础数据/D_主要财务指标.ipynb
+++ b/docs/memo/pipeline/基础数据/D_主要财务指标.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-12-09T07:41:38.466274Z",
-     "start_time": "2017-12-09T07:41:31.653290Z"
+     "end_time": "2018-01-06T15:58:02.224635Z",
+     "start_time": "2018-01-06T15:57:54.811569Z"
     }
    },
    "outputs": [],
@@ -28,8 +28,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-12-09T07:41:43.942300Z",
-     "start_time": "2017-12-09T07:41:38.469270Z"
+     "end_time": "2018-01-06T15:58:12.981236Z",
+     "start_time": "2018-01-06T15:58:02.227636Z"
     }
    },
    "outputs": [
@@ -37,14 +37,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2017-12-09 15:41:39.094439] INFO: Loader: Read benchmark and treasury data for 000001 from 1990-10-31 to 2017-12-08\n",
       "股票 000007 日期 2017-11-14 项目 基本每股收益 通过测试\n",
       "股票 000007 日期 2017-11-14 项目 净资产收益率加权 通过测试\n",
       "股票 002273 日期 2017-11-15 项目 基本每股收益 通过测试\n",
       "股票 002273 日期 2017-11-15 项目 净资产收益率加权 通过测试\n",
-      "[2017-12-09 15:41:43.842644] INFO: Performance: Simulated 12 trading days out of 12.\n",
-      "[2017-12-09 15:41:43.842644] INFO: Performance: first open: 2017-11-01 01:31:00+00:00\n",
-      "[2017-12-09 15:41:43.842644] INFO: Performance: last close: 2017-11-16 07:00:00+00:00\n"
+      "[2018-01-06 23:58:12.898180] INFO: Performance: Simulated 12 trading days out of 12.\n",
+      "[2018-01-06 23:58:12.903182] INFO: Performance: first open: 2017-11-01 01:31:00+00:00\n",
+      "[2018-01-06 23:58:12.904185] INFO: Performance: last close: 2017-11-16 07:00:00+00:00\n"
      ]
     },
     {
@@ -572,6 +571,8 @@
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": "block",
