--- a/docs/memo/pipeline/基础数据/G_成长能力.ipynb
+++ b/docs/memo/pipeline/基础数据/G_成长能力.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-12-09T08:03:46.328642Z",
-     "start_time": "2017-12-09T08:03:40.325221Z"
+     "end_time": "2018-01-06T15:59:06.441259Z",
+     "start_time": "2018-01-06T15:58:59.406665Z"
     }
    },
    "outputs": [],
@@ -28,8 +28,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-12-09T08:03:51.636134Z",
-     "start_time": "2017-12-09T08:03:46.328642Z"
+     "end_time": "2018-01-06T15:59:14.108893Z",
+     "start_time": "2018-01-06T15:59:06.446264Z"
     }
    },
    "outputs": [
@@ -37,14 +37,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2017-12-09 16:03:46.959906] INFO: Loader: Read benchmark and treasury data for 000001 from 1990-10-31 to 2017-12-08\n",
       "股票 000007 日期 2017-11-14 项目 主营业务收入增长率 通过测试\n",
       "股票 000007 日期 2017-11-14 项目 净利润增长率 通过测试\n",
       "股票 002273 日期 2017-11-15 项目 主营业务收入增长率 通过测试\n",
       "股票 002273 日期 2017-11-15 项目 净利润增长率 通过测试\n",
-      "[2017-12-09 16:03:51.551898] INFO: Performance: Simulated 12 trading days out of 12.\n",
-      "[2017-12-09 16:03:51.551898] INFO: Performance: first open: 2017-11-01 01:31:00+00:00\n",
-      "[2017-12-09 16:03:51.551898] INFO: Performance: last close: 2017-11-16 07:00:00+00:00\n"
+      "[2018-01-06 23:59:14.029301] INFO: Performance: Simulated 12 trading days out of 12.\n",
+      "[2018-01-06 23:59:14.033304] INFO: Performance: first open: 2017-11-01 01:31:00+00:00\n",
+      "[2018-01-06 23:59:14.034306] INFO: Performance: last close: 2017-11-16 07:00:00+00:00\n"
      ]
     },
     {
@@ -572,6 +571,8 @@
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": "block",
