--- a/docs/memo/pipeline/filters.ipynb
+++ b/docs/memo/pipeline/filters.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-11-28T19:44:18.863065Z",
-     "start_time": "2017-11-28T19:44:12.844348Z"
+     "end_time": "2018-01-08T17:10:13.724872Z",
+     "start_time": "2018-01-08T17:10:03.990530Z"
     }
    },
    "outputs": [],
@@ -34,8 +34,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-11-28T19:44:20.585592Z",
-     "start_time": "2017-11-28T19:44:18.863065Z"
+     "end_time": "2018-01-08T17:10:18.296932Z",
+     "start_time": "2018-01-08T17:10:13.728876Z"
     }
    },
    "outputs": [
@@ -43,7 +43,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2017-11-29 03:44:19.519350] INFO: Loader: Read benchmark and treasury data for 399001 from 1990-10-31 to 2017-11-28\n",
       "日期 2016-05-03 15:00:00+08:00 结果：\n",
       "                          last_close_price\n",
       "Equity(002466 [天齐锂业])             158.370\n",
@@ -205,16 +204,9 @@
       "Equity(I399102 [创业板综])           2479.196\n",
       "Equity(I399106 [深证综指])           1804.344\n",
       "Equity(600519 [贵州茅台])             250.820\n",
-      "[2017-11-29 03:44:20.495637] INFO: Performance: Simulated 6 trading days out of 6.\n",
-      "[2017-11-29 03:44:20.495637] INFO: Performance: first open: 2016-05-03 01:31:00+00:00\n",
-      "[2017-11-29 03:44:20.495637] INFO: Performance: last close: 2016-05-10 07:00:00+00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\liude\\Anaconda3\\envs\\bt36\\lib\\site-packages\\empyrical-0.3.3-py3.6.egg\\empyrical\\stats.py:522: RuntimeWarning: invalid value encountered in double_scalars\n"
+      "[2018-01-09 01:10:18.139825] INFO: Performance: Simulated 6 trading days out of 6.\n",
+      "[2018-01-09 01:10:18.149831] INFO: Performance: first open: 2016-05-03 01:31:00+00:00\n",
+      "[2018-01-09 01:10:18.150837] INFO: Performance: last close: 2016-05-10 07:00:00+00:00\n"
      ]
     },
     {
@@ -480,7 +472,7 @@
     "%%zipline --start 2016-5-2 --end 2016-5-10 --capital-base 100000 --bm_symbol 399001\n",
     "\n",
     "from zipline.pipeline import Pipeline\n",
-    "from zipline.pipeline.data.fundamentals import Fundamentals\n",
+    "from zipline.pipeline import Fundamentals\n",
     "\n",
     "from zipline.pipeline.data import USEquityPricing\n",
     "from zipline.pipeline.factors import SimpleMovingAverage, AverageDollarVolume\n",
@@ -526,8 +518,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-11-28T19:44:21.915775Z",
-     "start_time": "2017-11-28T19:44:20.589592Z"
+     "end_time": "2018-01-08T17:10:19.808941Z",
+     "start_time": "2018-01-08T17:10:18.299935Z"
     }
    },
    "outputs": [
@@ -535,7 +527,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2017-11-29 03:44:20.767163] INFO: Loader: Read benchmark and treasury data for 000300 from 1990-10-31 to 2017-11-28\n",
       "日期 2016-05-03 15:00:00+08:00 结果：\n",
       "                          last_close_price\n",
       "Equity(I000002 [A股指数])           3074.873\n",
@@ -578,9 +569,9 @@
       "Equity(I399003 [成份B指])           5822.897\n",
       "Equity(I399001 [深证成指])           9790.476\n",
       "Equity(I399002 [深成指R])          11465.800\n",
-      "[2017-11-29 03:44:21.838146] INFO: Performance: Simulated 6 trading days out of 6.\n",
-      "[2017-11-29 03:44:21.838146] INFO: Performance: first open: 2016-05-03 01:31:00+00:00\n",
-      "[2017-11-29 03:44:21.838146] INFO: Performance: last close: 2016-05-10 07:00:00+00:00\n"
+      "[2018-01-09 01:10:19.731890] INFO: Performance: Simulated 6 trading days out of 6.\n",
+      "[2018-01-09 01:10:19.731890] INFO: Performance: first open: 2016-05-03 01:31:00+00:00\n",
+      "[2018-01-09 01:10:19.734896] INFO: Performance: last close: 2016-05-10 07:00:00+00:00\n"
      ]
     },
     {
@@ -846,7 +837,7 @@
     "%%zipline --start 2016-5-2 --end 2016-5-10 --capital-base 100000\n",
     "\n",
     "from zipline.pipeline import Pipeline\n",
-    "from zipline.pipeline.data.fundamentals import Fundamentals\n",
+    "from zipline.pipeline import Fundamentals\n",
     "\n",
     "from zipline.pipeline.data import USEquityPricing\n",
     "from zipline.pipeline.factors import SimpleMovingAverage, AverageDollarVolume\n",
@@ -891,8 +882,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-11-28T19:44:23.721726Z",
-     "start_time": "2017-11-28T19:44:21.915775Z"
+     "end_time": "2018-01-08T17:10:22.190535Z",
+     "start_time": "2018-01-08T17:10:19.811944Z"
     }
    },
    "outputs": [
@@ -900,7 +891,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2017-11-29 03:44:22.148729] INFO: Loader: Read benchmark and treasury data for 000300 from 1990-10-31 to 2017-11-28\n",
       "日期 2016-05-03 15:00:00+08:00 结果：\n",
       "                              amount  high_dollar_volume  percent_difference\n",
       "Equity(000001 [平安银行])  4.285800e+08               False       -4.197338e-03\n",
@@ -1290,23 +1280,16 @@
       "Equity(603998 [方盛制药])  264410000.0               False       -4.478660e-03\n",
       "Equity(603999 [读者传媒])  187430000.0               False       -5.030591e-02\n",
       "\n",
-      "[2859 rows x 3 columns]\n",
-      "[2017-11-29 03:44:23.632911] INFO: Performance: Simulated 6 trading days out of 6.\n"
+      "[2860 rows x 3 columns]\n",
+      "[2018-01-09 01:10:22.107479] INFO: Performance: Simulated 6 trading days out of 6.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2017-11-29 03:44:23.632911] INFO: Performance: first open: 2016-05-03 01:31:00+00:00\n",
-      "[2017-11-29 03:44:23.632911] INFO: Performance: last close: 2016-05-10 07:00:00+00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\liude\\Anaconda3\\envs\\bt36\\lib\\site-packages\\empyrical-0.3.3-py3.6.egg\\empyrical\\stats.py:522: RuntimeWarning: invalid value encountered in double_scalars\n"
+      "[2018-01-09 01:10:22.116484] INFO: Performance: first open: 2016-05-03 01:31:00+00:00\n",
+      "[2018-01-09 01:10:22.119486] INFO: Performance: last close: 2016-05-10 07:00:00+00:00\n"
      ]
     },
     {
@@ -1572,7 +1555,7 @@
     "%%zipline --start 2016-5-2 --end 2016-5-10 --capital-base 100000\n",
     "\n",
     "from zipline.pipeline import Pipeline\n",
-    "from zipline.pipeline.data.fundamentals import Fundamentals\n",
+    "from zipline.pipeline import Fundamentals\n",
     "\n",
     "from zipline.pipeline.data import USEquityPricing\n",
     "from zipline.pipeline.factors import SimpleMovingAverage, AverageDollarVolume\n",
@@ -1625,8 +1608,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-11-28T19:44:25.207815Z",
-     "start_time": "2017-11-28T19:44:23.725726Z"
+     "end_time": "2018-01-08T17:10:23.419357Z",
+     "start_time": "2018-01-08T17:10:22.195538Z"
     }
    },
    "outputs": [
@@ -1634,7 +1617,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2017-11-29 03:44:23.909664] INFO: Loader: Read benchmark and treasury data for 000300 from 1990-10-31 to 2017-11-28\n",
       "日期 2016-05-03 15:00:00+08:00 结果：\n",
       "                          percent_difference\n",
       "Equity(000009 [中国宝安])              0.001058\n",
@@ -1926,22 +1908,15 @@
       "Equity(600837 [海通证券])              0.020897\n",
       "Equity(601198 [东兴证券])             -0.046456\n",
       "Equity(601318 [中国平安])              0.002915\n",
-      "[2017-11-29 03:44:25.130136] INFO: Performance: Simulated 6 trading days out of 6.\n"
+      "[2018-01-09 01:10:23.364320] INFO: Performance: Simulated 6 trading days out of 6.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2017-11-29 03:44:25.130136] INFO: Performance: first open: 2016-05-03 01:31:00+00:00\n",
-      "[2017-11-29 03:44:25.130136] INFO: Performance: last close: 2016-05-10 07:00:00+00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\liude\\Anaconda3\\envs\\bt36\\lib\\site-packages\\empyrical-0.3.3-py3.6.egg\\empyrical\\stats.py:522: RuntimeWarning: invalid value encountered in double_scalars\n"
+      "[2018-01-09 01:10:23.366322] INFO: Performance: first open: 2016-05-03 01:31:00+00:00\n",
+      "[2018-01-09 01:10:23.367325] INFO: Performance: last close: 2016-05-10 07:00:00+00:00\n"
      ]
     },
     {
@@ -2207,7 +2182,7 @@
     "%%zipline --start 2016-5-2 --end 2016-5-10 --capital-base 100000\n",
     "\n",
     "from zipline.pipeline import Pipeline\n",
-    "from zipline.pipeline.data.fundamentals import Fundamentals\n",
+    "from zipline.pipeline import Fundamentals\n",
     "\n",
     "from zipline.pipeline.data import USEquityPricing\n",
     "from zipline.pipeline.factors import SimpleMovingAverage, AverageDollarVolume\n",
@@ -2256,8 +2231,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-11-28T19:44:26.762219Z",
-     "start_time": "2017-11-28T19:44:25.211815Z"
+     "end_time": "2018-01-08T17:10:24.603147Z",
+     "start_time": "2018-01-08T17:10:23.426360Z"
     }
    },
    "outputs": [
@@ -2265,7 +2240,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2017-11-29 03:44:25.406747] INFO: Loader: Read benchmark and treasury data for 000300 from 1990-10-31 to 2017-11-28\n",
       "日期 2016-05-03 15:00:00+08:00 结果：\n",
       "                        percent_difference\n",
       "Equity(000001 [平安银行])       -4.197338e-03\n",
@@ -2655,23 +2629,16 @@
       "Equity(603998 [方盛制药])       -4.478660e-03\n",
       "Equity(603999 [读者传媒])       -5.030591e-02\n",
       "\n",
-      "[2820 rows x 1 columns]\n",
-      "[2017-11-29 03:44:26.676219] INFO: Performance: Simulated 6 trading days out of 6.\n"
+      "[2821 rows x 1 columns]\n",
+      "[2018-01-09 01:10:24.543111] INFO: Performance: Simulated 6 trading days out of 6.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2017-11-29 03:44:26.676219] INFO: Performance: first open: 2016-05-03 01:31:00+00:00\n",
-      "[2017-11-29 03:44:26.676219] INFO: Performance: last close: 2016-05-10 07:00:00+00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\liude\\Anaconda3\\envs\\bt36\\lib\\site-packages\\empyrical-0.3.3-py3.6.egg\\empyrical\\stats.py:522: RuntimeWarning: invalid value encountered in double_scalars\n"
+      "[2018-01-09 01:10:24.545109] INFO: Performance: first open: 2016-05-03 01:31:00+00:00\n",
+      "[2018-01-09 01:10:24.550112] INFO: Performance: last close: 2016-05-10 07:00:00+00:00\n"
      ]
     },
     {
@@ -2937,7 +2904,7 @@
     "%%zipline --start 2016-5-2 --end 2016-5-10 --capital-base 100000\n",
     "\n",
     "from zipline.pipeline import Pipeline\n",
-    "from zipline.pipeline.data.fundamentals import Fundamentals\n",
+    "from zipline.pipeline import Fundamentals\n",
     "\n",
     "from zipline.pipeline.data import USEquityPricing\n",
     "from zipline.pipeline.factors import SimpleMovingAverage, AverageDollarVolume\n",
@@ -2986,8 +2953,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-11-28T19:44:28.990882Z",
-     "start_time": "2017-11-28T19:44:26.766218Z"
+     "end_time": "2018-01-08T17:10:25.948049Z",
+     "start_time": "2018-01-08T17:10:24.606149Z"
     }
    },
    "outputs": [
@@ -2995,7 +2962,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2017-11-29 03:44:27.029184] INFO: Loader: Read benchmark and treasury data for 000300 from 1990-10-31 to 2017-11-28\n",
       "日期 2016-05-03 15:00:00+08:00 结果：\n",
       "                         percent_difference\n",
       "Equity(000025 [特 力Ａ])            -0.035058\n",
@@ -3386,24 +3352,15 @@
       "Equity(601601 [中国太保])             0.021671\n",
       "\n",
       "[113 rows x 1 columns]\n",
-      "[2017-11-29 03:44:28.814632] INFO: Performance: Simulated 6 trading days out of 6.\n"
+      "[2018-01-09 01:10:25.864993] INFO: Performance: Simulated 6 trading days out of 6.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2017-11-29 03:44:28.814632] INFO: Performance: first open: 2016-05-03 01:31:00+00:00\n",
-      "[2017-11-29 03:44:28.814632] INFO: Performance: last close: 2016-05-10 07:00:00+00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\liude\\source\\repos\\zipline\\zipline\\zipline\\pipeline\\filters\\filter.py:380: RuntimeWarning: invalid value encountered in less_equal\n",
-      "  return (lower_bounds <= data) & (data <= upper_bounds)\n",
-      "C:\\Users\\liude\\Anaconda3\\envs\\bt36\\lib\\site-packages\\empyrical-0.3.3-py3.6.egg\\empyrical\\stats.py:522: RuntimeWarning: invalid value encountered in double_scalars\n"
+      "[2018-01-09 01:10:25.866993] INFO: Performance: first open: 2016-05-03 01:31:00+00:00\n",
+      "[2018-01-09 01:10:25.868994] INFO: Performance: last close: 2016-05-10 07:00:00+00:00\n"
      ]
     },
     {
@@ -3669,7 +3626,7 @@
     "%%zipline --start 2016-5-2 --end 2016-5-10 --capital-base 100000\n",
     "\n",
     "from zipline.pipeline import Pipeline\n",
-    "from zipline.pipeline.data.fundamentals import Fundamentals\n",
+    "from zipline.pipeline import Fundamentals\n",
     "\n",
     "from zipline.pipeline.data import USEquityPricing\n",
     "from zipline.pipeline.factors import SimpleMovingAverage, AverageDollarVolume\n",
@@ -3784,8 +3741,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-11-28T19:44:41.822338Z",
-     "start_time": "2017-11-28T19:44:28.990882Z"
+     "end_time": "2018-01-08T17:10:29.540856Z",
+     "start_time": "2018-01-08T17:10:25.953053Z"
     }
    },
    "outputs": [
@@ -3793,7 +3750,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2017-11-29 03:44:29.293084] INFO: Loader: Read benchmark and treasury data for 000300 from 1990-10-31 to 2017-11-28\n",
       "日期 2016-05-03 15:00:00+08:00 结果：\n",
       " Empty DataFrame\n",
       "Columns: []\n",
@@ -3818,17 +3774,9 @@
       " Empty DataFrame\n",
       "Columns: []\n",
       "Index: [Equity(002466 [天齐锂业]), Equity(002709 [天赐材料]), Equity(300484 [蓝海华腾]), Equity(300496 [中科创达]), Equity(600519 [贵州茅台])]\n",
-      "[2017-11-29 03:44:41.713005] INFO: Performance: Simulated 6 trading days out of 6.\n",
-      "[2017-11-29 03:44:41.713005] INFO: Performance: first open: 2016-05-03 01:31:00+00:00\n",
-      "[2017-11-29 03:44:41.713005] INFO: Performance: last close: 2016-05-10 07:00:00+00:00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\liude\\source\\repos\\zipline\\zipline\\zipline\\pipeline\\filters\\filter.py:380: RuntimeWarning: invalid value encountered in less_equal\n",
-      "  return (lower_bounds <= data) & (data <= upper_bounds)\n"
+      "[2018-01-09 01:10:29.481816] INFO: Performance: Simulated 6 trading days out of 6.\n",
+      "[2018-01-09 01:10:29.482818] INFO: Performance: first open: 2016-05-03 01:31:00+00:00\n",
+      "[2018-01-09 01:10:29.483823] INFO: Performance: last close: 2016-05-10 07:00:00+00:00\n"
      ]
     },
     {
@@ -4095,9 +4043,9 @@
     "\n",
     "from zipline.pipeline import Pipeline\n",
     "from zipline.pipeline.data import USEquityPricing\n",
-    "from zipline.pipeline.data.fundamentals import Fundamentals\n",
+    "from zipline.pipeline import Fundamentals\n",
     "from zipline.pipeline.factors import SimpleMovingAverage, AverageDollarVolume\n",
-    "from zipline.component.filters import IsPrimaryShare\n",
+    "from zipline.pipeline.builtin import IsStock\n",
     "from zipline.api import attach_pipeline, pipeline_output\n",
     "\n",
     "from zipline.api import symbol, sid, get_datetime\n",
@@ -4111,7 +4059,7 @@
     "    high_dollar_volume = dollar_volume.percentile_between(90,100)\n",
     "\n",
     "    # Top open securities filter (high dollar volume securities)\n",
-    "    top_open_price = USEquityPricing.open.latest.top(50, mask=IsPrimaryShare())\n",
+    "    top_open_price = USEquityPricing.open.latest.top(50, mask=IsStock())\n",
     "\n",
     "    # Top percentile close price filter (high dollar volume, top 50 open price)\n",
     "    high_close_price = USEquityPricing.close.latest.percentile_between(90, 100, mask=top_open_price)\n",
@@ -4140,9 +4088,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "backtest",
+   "display_name": "zipline",
    "language": "python",
-   "name": "bt36"
+   "name": "zipline"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4161,6 +4109,8 @@
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": "block",
